@@ -364,7 +364,7 @@ public class EventManager {
                 List<Integer> ids = ticketRepository.selectNotAllocatedTicketsForUpdate(eventId, Math.abs(seatsDifference), singletonList(TicketStatus.FREE.name()));
                 Validate.isTrue(ids.size() == Math.abs(seatsDifference), "cannot lock enough tickets for deletion.");
                 int invalidatedTickets = ticketRepository.invalidateTickets(ids);
-                Validate.isTrue(ids.size() == invalidatedTickets, String.format("error during ticket invalidation: expected %d, got %d", ids.size(), invalidatedTickets));
+                Validate.isTrue(ids.size() == invalidatedTickets, "error during ticket invalidation: expected %d, got %d".formatted(ids.size(), invalidatedTickets));
             }
         }
         if (updateSubscriptions) {
@@ -510,7 +510,7 @@ public class EventManager {
         List<Integer> lockedTickets = ticketRepository.selectTicketInCategoryForUpdate(event.getId(), src.getId(), notSoldTickets, singletonList(TicketStatus.FREE.name()));
         int locked = lockedTickets.size();
         if(locked != notSoldTickets) {
-            throw new IllegalStateException(String.format("Expected %d free tickets, got %d.", notSoldTickets, locked));
+            throw new IllegalStateException("Expected %d free tickets, got %d.".formatted(notSoldTickets, locked));
         }
         ticketCategoryRepository.updateSeatsAvailability(src.getId(), src.getSoldTicketsCount());
         if(target.isPresent()) {
@@ -524,7 +524,7 @@ public class EventManager {
             }
         } else {
             int result = ticketRepository.unbindTicketsFromCategory(event.getId(), src.getId(), lockedTickets);
-            Validate.isTrue(result == locked, String.format("Expected %d modified tickets, got %d.", locked, result));
+            Validate.isTrue(result == locked, "Expected %d modified tickets, got %d.".formatted(locked, result));
             ticketRepository.resetTickets(lockedTickets);
         }
         specialPriceRepository.cancelExpiredTokens(src.getId());
